Fixed parallax on mobile devices.

--- a/style.css
+++ b/style.css
@@ -231,8 +231,28 @@ video {
   -o-background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-  background-attachment: fixed;
   position: relative;
+}
+
+@media (hover: hover) {
+  .section-3 {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.7)
+      ),
+      url(imgs/hours.jpg);
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    position: relative;
+    background-attachment: fixed;
+  }
 }
 
 @media (hover: none) {
@@ -242,7 +262,13 @@ video {
         rgba(0, 0, 0, 0),
         rgba(0, 0, 0, 0.7)
       ),
-      url(imgs/hours.jpg) cover no-repeat;
+      url(imgs/hours.jpg);
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
   }
 }
 
